Update and rename DockerVolumes.md to 1. DockerVolumes.md

--- a/1. DockerVolumes.md
+++ b/1. DockerVolumes.md
@@ -19,6 +19,9 @@ In order to understand what a Docker volume is, we first need to be clear about 
 
 👉 **Docker calls this combination of read-only layers with a read-write layer on top a Union File System.**
 
+![image](https://user-images.githubusercontent.com/33947539/149332689-17ec47ed-b926-436f-b10a-2addb524ad03.png)
+
+
 ### Temporary Data
 
 So Data can be kept temporarily inside a Docker container in two ways:
