--- a/2. DockerVolumes.md
+++ b/2. DockerVolumes.md
@@ -65,7 +65,118 @@ $ cat /var/log/serverlogs/access.log
 
 ***Congratulations!! You have successfully set up reliable logging independent of lifespan of containers.***
 
-## What are anonymous and named volumes
+## What are anonymous and named volumes:
+As we have seen in the above To create an anonymous volume, run:
+
+```Dockerfile
+docker run -v /path/in/container ...
+```
+- First let’s take a look at mysql [Dockerfile](https://github.com/docker-library/mysql/blob/3dfa7a3c038f342b9dec09fa85247bef69ae2349/8.0/Dockerfile), you will notice it already   uses volume for /var/lib/mysql
+  
+  ```Dockerfile
+  VOLUME /var/lib/mysql  //from the dockerfile
+  ```
+Docker commands:
+
+```bash
+docker pull mysql
+
+docker run --name myDatabase -e MYSQL_ROOT_PASSWORD=password -d mysql
+
+//Enter the conatiner and start mysql
+docker exec -it 64b mysql -u root -p
+```
+It will prompt for a password. Use the same one you used to run the container.
+We have successfully started a mysql container:)
+
+Now create a databse called app and populate the same.
+
+***Launching another SQL container***
+
+Mysql containers use docker volumes. So the new container should have access to the persisted data.
+If you start a second container on the same machine, ideally it should bind to the same volume.
+
+Let’s try it out and see if that really happens.
+
+```bash
+docker run --name myDatabase2 -e MYSQL_ROOT_PASSWORD=password -d mysql
+//Output
+e905312e2a6029a95484116715826b635315e868d1014ea6ef1099dbb9cab97a
+```
+
+**Let us see if we see the same data as both the containers share the same volume as you saw in Dockerfile, which is VOLUME /var/lib/mysql**
+
+```bash
+docker exec -it e90 mysql -u root -p
+//Run the following commands once you established a mysql session
+mysql> use app;
+ERROR 1049 (42000): Unknown database 'app'
+
+```
+👉 😕 ***We are also using volumes so why are we not seeing the data?***
+
+Let us confirm both the containers are using volumes by running docker inspect <container-id>
+          
+```bash
+docker inspect e90
+//Output
+...
+"Mounts": [
+            {
+                "Type": "volume",
+                "Name": "86d582b1e613f30b1fff84f7cdaf78deb11bead8bff0b684d65fd2c46c56d00f",
+                "Source": "/var/lib/docker/volumes/86d582b1e613f30b1fff84f7cdaf78deb11bead8bff0b684d65fd2c46c56d00f/_data",
+                "Destination": "/var/lib/mysql",
+                "Driver": "local",
+                "Mode": "",
+                "RW": true,
+                "Propagation": ""
+            }
+        ],
+...
+docker inspect 64b
+//Output
+...
+"Mounts": [
+            {
+                "Type": "volume",
+                "Name": "6709ef1fc6804af4a543f29d8cc71c204811d82182b7de0ace2a742be186fbe3",
+                "Source": "/var/lib/docker/volumes/6709ef1fc6804af4a543f29d8cc71c204811d82182b7de0ace2a742be186fbe3/_data",
+                "Destination": "/var/lib/mysql",
+                "Driver": "local",
+                "Mode": "",
+                "RW": true,
+                "Propagation": ""
+            }
+        ],
+...
+
+```
+          
+#### The key thing to note here is even though the destination directories same, the source directories are different.
+
+Although the volume points to the same folder inside the container, on the host system, since we’ve not explicitly assigned a folder, it creates a unique folder in the docker volumes directory.
+
+![image](https://user-images.githubusercontent.com/33947539/149334226-41bf1bb8-3e99-412f-bee4-335b38706ee4.png)
+
+>These are anonymous volumes and are created and managed by docker.
+>Note : They are stored here /var/lib/docker/volumes
+
+👉 ***So how do we ensure all our mysql containers have access to the same data?***
+          
+**Answer is: Named Volumes**
+          
+![image](https://user-images.githubusercontent.com/33947539/149334441-90f49a1b-7eb0-4947-a740-9d7faa4573f8.png)
+
+
+
+
+
+
+
+
+
+
 
 
 
